<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="share">Поделиться приложением</string>
    <string name="help">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="dark_theme">Темная тема</string>
    <string name="back">Назад</string>
    <string name="search_screen_placeholder" tools:ignore="UnusedResources">Это экран поиска контента! (ЗАГЛУШКА)</string>
    <string name="clear_search_query">Очистить поисковый запрос</string>
    <string name="media_screen_placeholder">Это экран медиатеки! (ЗАГЛУШКА)</string>
    <string name="share_message">Курс «Андроид-разработчик» в Яндекс Практикуме: https://praktikum.yandex.ru/android-developer/</string>
    <string name="support_email">my@email.com</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
</resources>