<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.PlaylistMaker.Screen"
    android:id="@+id/settings"
    tools:ignore="UseCompoundDrawables">

    <LinearLayout style="@style/Widget.PlaylistMaker.Header">

        <ImageView
            android:id="@+id/back_button"
            style="@style/Widget.PlaylistMaker.BackButton"
            android:contentDescription="@string/back" />

        <TextView
            style="@style/Widget.PlaylistMaker.ScreenTitle"
            android:text="@string/settings" />
    </LinearLayout>

    <LinearLayout style="@style/Widget.PlaylistMaker.SettingRow">

        <TextView
            style="@style/Widget.PlaylistMaker.SettingLabel"
            android:text="@string/dark_theme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            app:trackTint="@color/switch_track_tint"
            app:thumbTint="@color/switch_thumb_tint" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/share_setting"
        style="@style/Widget.PlaylistMaker.SettingRow">

        <TextView
            style="@style/Widget.PlaylistMaker.SettingLabel"
            android:text="@string/share" />

        <ImageView
            style="@style/Widget.PlaylistMaker.SettingIcon"
            android:importantForAccessibility="no"
            android:src="@drawable/share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/support_setting"
        style="@style/Widget.PlaylistMaker.SettingRow">

        <TextView
            style="@style/Widget.PlaylistMaker.SettingLabel"
            android:text="@string/help" />

        <ImageView
            style="@style/Widget.PlaylistMaker.SettingIcon"
            android:importantForAccessibility="no"
            android:src="@drawable/help" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/agreement_setting"
        style="@style/Widget.PlaylistMaker.SettingRow">

        <TextView
            style="@style/Widget.PlaylistMaker.SettingLabel"
            android:text="@string/agreement" />

        <ImageView
            style="@style/Widget.PlaylistMaker.SettingIcon"
            android:importantForAccessibility="no"
            android:src="@drawable/chevron_right" />
    </LinearLayout>
</LinearLayout>
