<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main"
    android:id="@+id/main"
    android:clipChildren="false"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:layout_gravity="center"
        android:paddingHorizontal="@dimen/margin_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_header" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginVertical="@dimen/margin_vertical"
        android:layout_marginHorizontal="@dimen/margin_horizontal"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <Button
            android:id="@+id/search_button"
            style="@style/Widget.PlaylistMaker.Button.Main"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:text="@string/search"
            app:icon="@drawable/search" />

        <Button
            android:id="@+id/media_button"
            style="@style/Widget.PlaylistMaker.Button.Main"
            android:layout_marginBottom="@dimen/margin_bottom"
            android:text="@string/media"
            app:icon="@drawable/media" />

        <Button
            android:id="@+id/settings_button"
            style="@style/Widget.PlaylistMaker.Button.Main"
            android:text="@string/settings"
            app:icon="@drawable/settings" />

    </LinearLayout>
</LinearLayout>
